--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,95 +1,55 @@
-name: Docker
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
+name: Build and Push Docker Image to GHCR
 
 on:
-  schedule:
-    - cron: '20 16 * * *'
   push:
-    branches: [ "main" ]
-    # Publish semver tags as releases.
-    tags: [ 'v*.*.*' ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main # Trigger on pushes to the main branch
+    tags:
+      - 'v*.*.*' # Trigger on new tags like v1.0.0, v1.0.1, etc.
+  workflow_dispatch: # Allows manual triggering from the GitHub UI
 
 env:
   REGISTRY: ghcr.io
-  # IMAGE_NAME: ${{ github.repository }} # Original: This gives <owner>/<repo>
-  # For GHCR, the image name is typically <owner>/<repo>/<image-name-within-repo>
-  # If you want to publish it directly as ghcr.io/owner/repo/mediawiki, then the above is fine.
-  # But if you want to be more specific, like ghcr.io/owner/repo/custom-mediawiki,
-  # you'd define it more explicitly.
-  # Let's assume you want it named 'mediawiki' within your repository's GHCR package.
-  IMAGE_NAME: ${{ github.repository_owner }}/${{ github.event.repository.name }}/isd-mediawiki
+  # Replace 'YOUR_GITHUB_USERNAME' with your GitHub username or organization name
+  # Replace 'YOUR_REPOSITORY_NAME' with the actual name of your GitHub repository
+  IMAGE_NAME: ${{ github.repository }} # This automatically resolves to 'owner/repo-name'
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
+
+    # Permissions required to write to GHCR (packages)
     permissions:
       contents: read
       packages: write
-      id-token: write
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Install the cosign tool except on PR
-      - name: Install cosign
-        if: github.event_name != 'pull_request'
-        uses: sigstore/cosign-installer@59acb6260d9c0ba8f4a2f9d9b48431a222b68e20 #v3.5.0
-        with:
-          cosign-release: 'v2.2.4'
-
-      # Set up BuildKit Docker container builder
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
-
-      # Login against a Docker registry except on PR
-      - name: Log into registry ${{ env.REGISTRY }}
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # Extract metadata (tags, labels) for Docker
-      - name: Extract Docker metadata
+      - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
+        uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          # You might want to customize the tags generated.
-          # For example, if you want specific tags like 'latest', 'main', or branch names.
           tags: |
-            type=schedule
-            type=raw,value=latest,enable={{branch == 'main' || startsWith(github.ref, 'v')}}
-            type=raw,value={{date 'yyyyMMddHHmmss'}},enable=true
-            type=ref,event=branch
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}
-            type=semver,pattern={{major}}.{{minor}}
+            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
+            type=sha,format=short
+            type=ref,event=tag # e.g., v1.0.0
 
-      # Build and push Docker image with Buildx (don't push on PR)
       - name: Build and push Docker image
-        id: build-and-push
-        uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
+        uses: docker/build-push-action@v5
         with:
-          context: .
-          push: ${{ github.event_name != 'pull_request' }}
+          context: ./sso-client
+          file: ./sso-client/Dockerfile # Path to your Dockerfile
+          push: true # Push the image to the registry
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-      # Sign the resulting Docker image digest except on PRs.
-      - name: Sign the published Docker image
-        if: ${{ github.event_name != 'pull_request' }}
-        env:
-          TAGS: ${{ steps.meta.outputs.tags }}
-          DIGEST: ${{ steps.build-and-push.outputs.digest }}
-        run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
+          # No build-args are explicitly needed here if env vars are via docker-compose/runtime
