--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -1,12 +1,13 @@
 apiVersion: v2
-name: isd-wiki
+name: isdwiki
 description: A Helm chart for deploying ISD MediaWiki with a database.
 version: 0.1.0
 appVersion: "1.39.3"
 type: application
+icon: https://upload.wikimedia.org/wikipedia/commons/d/dd/MediaWiki-2020-logo.svg
 
 dependencies:
   - name: mariadb
     version: "11.4.7"
-    repository: "https://charts.bitnami.com/bitnami" 
+    repository: oci://registry-1.docker.io/bitnamicharts 
     condition: mariadb.enabled
