--- a/helm/templates/configmap.yaml
+++ b/helm/templates/configmap.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "isdWiki.fullname" . }}-config
+  name: {{ include "mediawiki.fullname" . }}-config
   labels:
-    {{- include "isdWiki.labels" . | nindent 4 }}
+    {{- include "mediawiki.labels" . | nindent 4 }}
 data:
   LocalSettings.php: |
     <?php
@@ -19,10 +19,10 @@ data:
 
     # Database settings
     $wgDBtype = "{{ .Values.mediawiki.database.type }}";
-    $wgDBserver = "{{ .Values.mediawiki.database.host | default (printf "%s-mysql" (include "isdWiki.fullname" .)) }}";
+    $wgDBserver = "{{ .Values.mediawiki.database.host | default (printf "%s-mysql" (include "mediawiki.fullname" .)) }}";
     $wgDBname = "{{ .Values.mediawiki.database.name }}";
     $wgDBuser = "{{ .Values.mediawiki.database.user }}";
-    $wgDBpassword = file_get_contents("/var/run/secrets/{{ include "isdWiki.fullname" . }}-db-credentials/password"); # Read from mounted secret
+    $wgDBpassword = file_get_contents("/var/run/secrets/{{ include "mediawiki.fullname" . }}-db-credentials/password"); # Read from mounted secret
 
     # Postgres specific settings
     # $wgDBport = 5432;
@@ -70,7 +70,7 @@ data:
     $wgMainCacheType = CACHE_MEMCACHED; # Or CACHE_ANYTHING
     $wgParserCacheType = CACHE_MEMCACHED;
     $wgMessageCacheType = CACHE_MEMCACHED;
-    $wgMemCachedServers = [ '{{ include "isdWiki.fullname" . }}-memcached:11211' ]; # If you use memcached as a subchart
+    $wgMemCachedServers = [ '{{ include "mediawiki.fullname" . }}-memcached:11211' ]; # If you use memcached as a subchart
 
     # Debugging settings (useful for development)
     # $wgShowExceptionDetails = true;
@@ -87,7 +87,7 @@ data:
     # For example, extensions:
     # wfLoadExtension( 'VisualEditor' );
     # wfLoadExtension( 'SyntaxHighlight_GeSHi' );
-    # ...
+    # mediawiki..
 
     # The rest of the auto-generated LocalSettings.php content would go here.
     # It's generally good practice to keep this minimal and manage more complex
