--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -14,25 +14,25 @@ spec:
   template:
     metadata:
       annotations:
-        # # 1. Vault injector configuration
-        # vault.hashicorp.com/agent-inject: 'true'
-        # # set to 'true' if you are going to connect and query vault from your application
-        # vault.hashicorp.com/agent-inject-token: 'false' 
-        # # this makes sure the secret vault will only change during pod restart
-        # vault.hashicorp.com/agent-pre-populate-only: 'true' 
-        # # Must match cluster. Use one of: k8s-silver, k8s-gold, k8s-golddr, k8s-emerald
-        # vault.hashicorp.com/auth-path: auth/k8s-{{ .Values.global.cluster }}  
-        # vault.hashicorp.com/namespace: platform-services
-        # # licenseplate-nonprod or licenseplate-prod are your options
-        # vault.hashicorp.com/role: {{ .Values.global.vault.role }} 
-        # # - The value is the path in Vault where the secret is located.
-        # vault.hashicorp.com/agent-inject-secret-secrets: {{ .Values.global.licenseplate }}-{{ .Values.global.vault.engine }}/{{ .Values.global.vault.secret }}
-        # # - The template Vault Agent should use for rendering a secret:
-        # vault.hashicorp.com/agent-inject-template-secrets: |
-        #   {{`{{- with secret `}}"{{ .Values.global.licenseplate }}-{{ .Values.global.vault.engine }}/{{ .Values.global.vault.secret }}"{{` }}
-        #   {{- range $k, $v := .Data.data }}
-        #   {{ $k }}={{ $v }}{{ end -}}
-        #   {{- end `}} }}
+        # 1. Vault injector configuration
+        vault.hashicorp.com/agent-inject: 'true'
+        # set to 'true' if you are going to connect and query vault from your application
+        vault.hashicorp.com/agent-inject-token: 'false' 
+        # this makes sure the secret vault will only change during pod restart
+        vault.hashicorp.com/agent-pre-populate-only: 'true' 
+        # Must match cluster. Use one of: k8s-silver, k8s-gold, k8s-golddr, k8s-emerald
+        vault.hashicorp.com/auth-path: auth/k8s-{{ .Values.global.cluster }}  
+        vault.hashicorp.com/namespace: platform-services
+        # licenseplate-nonprod or licenseplate-prod are your options
+        vault.hashicorp.com/role: {{ .Values.global.vault.role }} 
+        # - The value is the path in Vault where the secret is located.
+        vault.hashicorp.com/agent-inject-secret-secrets: {{ .Values.global.licenseplate }}-{{ .Values.global.vault.engine }}/{{ .Values.global.vault.secret }}
+        # - The template Vault Agent should use for rendering a secret:
+        vault.hashicorp.com/agent-inject-template-secrets: |
+          {{`{{- with secret `}}"{{ .Values.global.licenseplate }}-{{ .Values.global.vault.engine }}/{{ .Values.global.vault.secret }}"{{` }}
+          {{- range $k, $v := .Data.data }}
+          {{ $k }}={{ $v }}{{ end -}}
+          {{- end `}} }}
       {{- with .Values.mediawiki.podAnnotations }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
