--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -44,7 +44,7 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ .Values.global.serviceAcccount.name }}
+      serviceAccountName: {{ .Values.global.serviceAccount.name }}
       securityContext:
         {{- toYaml .Values.mediawiki.podSecurityContext | nindent 8 }}
       containers:
