--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -19,7 +19,7 @@ global:
     # Vault role for this service
     role: "abcdef-nonprod" 
     # Secrets path in container
-    containerPath: "/vault/secrets/secrets"
+    secret: "secrets-name"
     # Vault engine to use
     engine: "nonprod"
 
@@ -59,7 +59,7 @@ mediawiki:
 
   serviceAccount:
     # Specifies whether a service account should be created
-    create: true
+    create: false
     # Automatically mount a ServiceAccount's API credentials?
     automount: true
     # Annotations to add to the service account
@@ -299,12 +299,12 @@ mariadb:
     forcePassword: false
     ## @param auth.usePasswordFiles Mount credentials as files instead of using environment variables
     ##
-    usePasswordFiles: true
+    usePasswordFiles: false
     ## @param auth.customPasswordFiles Use custom password files when `auth.usePasswordFiles` is set to `true`. Define path for keys `root` and `user`, also define `replicator` if `architecture` is set to `replication`
-    customPasswordFiles:
-      root: /vault/secrets/isd-wiki-db-root
-      user: /vault/secrets/isd-wiki-db-user
-      replicator: /vault/secrets/isd-wiki-db-replicator
+    customPasswordFiles: {}
+      # root: /vault/secrets/isd-wiki-db-root
+      # user: /vault/secrets/isd-wiki-db-user
+      # replicator: /vault/secrets/isd-wiki-db-replicator
 
   ## @param initdbScripts Dictionary of initdb scripts
   ## Specify dictionary of scripts to be run at first boot
