--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -299,12 +299,12 @@ mariadb:
     forcePassword: false
     ## @param auth.usePasswordFiles Mount credentials as files instead of using environment variables
     ##
-    usePasswordFiles: false
+    usePasswordFiles: true
     ## @param auth.customPasswordFiles Use custom password files when `auth.usePasswordFiles` is set to `true`. Define path for keys `root` and `user`, also define `replicator` if `architecture` is set to `replication`
-    customPasswordFiles: {}
-      # root: /vault/secrets/isd-wiki-db-root
-      # user: /vault/secrets/isd-wiki-db-user
-      # replicator: /vault/secrets/isd-wiki-db-replicator
+    customPasswordFiles:
+      root: /vault/secrets/isd-wiki-db-root
+      user: /vault/secrets/isd-wiki-db-user
+      replicator: /vault/secrets/isd-wiki-db-replicator
 
   ## @param initdbScripts Dictionary of initdb scripts
   ## Specify dictionary of scripts to be run at first boot
