--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -26,7 +26,7 @@ spec:
         # licenseplate-nonprod or licenseplate-prod are your options
         vault.hashicorp.com/role: {{ .Values.global.vault.role }} 
         # - The value is the path in Vault where the secret is located.
-        vault.hashicorp.com/agent-inject-secret-isd-wiki-config: {{ .Values.global.licenseplate }}-{{ .Values.global.vault.engine }}/{{ .Values.global.vault.secret }}
+        vault.hashicorp.com/agent-inject-secret-isd-db-user: {{ .Values.global.licenseplate }}-{{ .Values.global.vault.engine }}/{{ .Values.global.vault.secret }}
         # - The template Vault Agent should use for rendering a secret:
         vault.hashicorp.com/agent-inject-template-secrets: |
           {{`{{- with secret `}}"{{ .Values.global.licenseplate }}-{{ .Values.global.vault.engine }}/{{ .Values.global.vault.secret }}"{{` }}
@@ -57,6 +57,27 @@ spec:
             - name: http
               containerPort: 80
               protocol: TCP
+          command: ["/bin/sh"]
+          args:
+            - -c
+            - |
+              echo "INFO: container starting entrypoint..."
+              if [ -s /vault/secrets/isd-db-user ]; then
+                SECRET_CONTENT=$(cat /vault/secrets/isd-db-user)
+                export MEDIAWIKI_DB_PASSWORD=$(echo "${SECRET_CONTENT}" | tr -d '\n\r ')
+                echo "INFO: Password loaded from Vault secret. Length: ${#MEDIAWIKI_DB_PASSWORD}"
+              else
+                echo "ERROR: /vault/secrets/isd-db-user is empty or does not exist. Exiting."
+                exit 1
+              fi
+
+              if [ -z "${MEDIAWIKI_DB_PASSWORD}" ]; then
+                echo "ERROR: MEDIAWIKI_DB_PASSWORD variable is empty after loading from secret. Exiting."
+                exit 1
+              fi
+
+              echo "INFO: Executing Mediawiki server..."
+              exec /var/www/html/entrypoint.sh"
           env:
             - name: MEDIAWIKI_DB_TYPE
               value: {{ .Values.mediawiki.database.type | quote }}
@@ -66,11 +87,11 @@ spec:
               value: {{ .Values.mediawiki.database.name | quote }}
             - name: MEDIAWIKI_DB_USER
               value: {{ .Values.mediawiki.database.user | quote }}
-            - name: MEDIAWIKI_DB_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "mediawiki.fullname" . }}-db-credentials
-                  key: password
+            # - name: MEDIAWIKI_DB_PASSWORD
+            #   valueFrom:
+            #     secretKeyRef:
+            #       name: {{ include "mediawiki.fullname" . }}-db-credentials
+            #       key: password
             - name: MEDIAWIKI_SITE_NAME
               value: {{ .Values.mediawiki.siteName | quote }}
             # Add more environment variables for MediaWiki configuration as needed
