--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -77,7 +77,7 @@ spec:
               fi
 
               echo "INFO: Executing Mediawiki server..."
-              exec /entrypoint.sh
+              sh /entrypoint.sh
           env:
             - name: MEDIAWIKI_DB_TYPE
               value: {{ .Values.mediawiki.database.type | quote }}
