Update my.cnf Mariadb config.

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -449,7 +449,7 @@ mariadb:
       basedir=/opt/bitnami/mariadb
       datadir=/bitnami/mariadb/data
       plugin_dir=/opt/bitnami/mariadb/plugin
-      port={{ .Values.primary.containerPorts.mysql }}
+      port=3306
       socket=/opt/bitnami/mariadb/tmp/mysql.sock
       tmpdir=/opt/bitnami/mariadb/tmp
       max_allowed_packet=16M
@@ -461,27 +461,22 @@ mariadb:
       slow_query_log=0
       long_query_time=10.0
       binlog_expire_logs_seconds=2592000
-      {{- if .Values.tls.enabled }}
-      ssl_cert=/opt/bitnami/mariadb/certs/{{ .Values.tls.certFilename }}
-      ssl_key=/opt/bitnami/mariadb/certs/{{ .Values.tls.certKeyFilename }}
-      {{- if (include "mariadb.tlsCACert" .) }}
-      ssl_ca={{ include "mariadb.tlsCACert" . }}
-      {{- end }}
-      {{- end }}
-      {{- if .Values.tde.enabled }}
-      plugin_load_add=file_key_management
-      file_key_management_filename=/opt/bitnami/mariadb/tde/{{ .Values.tde.encryptedKeyFilename }}
-      file_key_management_filekey=FILE:/opt/bitnami/mariadb/tde/{{ .Values.tde.randomKeyFilename }}
-      file_key_management_encryption_algorithm={{ .Values.tde.fileKeyManagementEncryptionAlgorithm }}
-      innodb_encrypt_tables={{ .Values.tde.innodbEncryptTables }}
-      innodb_encrypt_log={{ .Values.tde.innodbEncryptLog }}
-      innodb_encrypt_temporary_tables={{ .Values.tde.innodbEncryptTemporaryTables }}
-      innodb_encryption_threads={{ .Values.tde.innodbEncryptionThreads }}
-      encrypt_tmp_disk_tables={{ .Values.tde.encryptTmpDiskTables }}
-      encrypt_tmp_files={{ .Values.tde.encryptTmpTiles }}
-      encrypt_binlog={{ .Values.tde.encryptBINLOG }}
-      aria_encrypt_tables={{ .Values.tde.ariaEncryptTables }}
-      {{- end }}
+      # ssl_cert=/opt/bitnami/mariadb/certs/{{ .Values.tls.certFilename }}
+      # ssl_key=/opt/bitnami/mariadb/certs/{{ .Values.tls.certKeyFilename }}
+      # ssl_ca={{ include "mariadb.tlsCACert" . }}
+      # plugin_load_add=file_key_management
+      # file_key_management_filename=/opt/bitnami/mariadb/tde/{{ .Values.tde.encryptedKeyFilename }}
+      # file_key_management_filekey=FILE:/opt/bitnami/mariadb/tde/{{ .Values.tde.randomKeyFilename }}
+      # file_key_management_encryption_algorithm={{ .Values.tde.fileKeyManagementEncryptionAlgorithm }}
+      # innodb_encrypt_tables={{ .Values.tde.innodbEncryptTables }}
+      # innodb_encrypt_log={{ .Values.tde.innodbEncryptLog }}
+      # innodb_encrypt_temporary_tables={{ .Values.tde.innodbEncryptTemporaryTables }}
+      # innodb_encryption_threads={{ .Values.tde.innodbEncryptionThreads }}
+      # encrypt_tmp_disk_tables={{ .Values.tde.encryptTmpDiskTables }}
+      # encrypt_tmp_files={{ .Values.tde.encryptTmpTiles }}
+      # encrypt_binlog={{ .Values.tde.encryptBINLOG }}
+      # aria_encrypt_tables={{ .Values.tde.ariaEncryptTables }}
+
 
       [client]
       port=3306
@@ -869,7 +864,7 @@ mariadb:
     name: secondary
     ## @param secondary.replicaCount Number of MariaDB secondary replicas
     ##
-    replicaCount: 1
+    replicaCount: 0
     ## @param secondary.command Override default container command on MariaDB Secondary container(s) (useful when using custom images)
     ##
     command: []
