--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -29,7 +29,7 @@ mediawiki:
 
   image:
     repository: ghcr.io/bcgov/isd-wiki
-    pullPolicy: IfNotPresent
+    pullPolicy: Always
     # Overrides the image tag whose default is the chart appVersion.
     tag: "latest"
 
