Update helm to include NGINX web server for MediaWiki.

--- a/.github/workflows/publish-mediawiki-chart.yaml
+++ b/.github/workflows/publish-mediawiki-chart.yaml
@@ -1,4 +1,4 @@
-name: Publish ISD Wiki Helm Chart to GHCR
+name: Publish MediaWiki Helm Chart to GHCR
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     paths:
       # Adjust these paths to your actual chart location and workflow file
       - 'helm/**'
-      - '.github/workflows/publish-chart.yaml'
+      - '.github/workflows/publish-mediawiki-chart.yaml'
 
 jobs:
   publish:
