--- a/.github/workflows/publish-nginx-chart.yaml
+++ b/.github/workflows/publish-nginx-chart.yaml
@@ -3,7 +3,7 @@ name: Publish NGINX Helm Chart to GHCR
 on:
   push:
     branches:
-      - main
+      - main # Or your default branch like 'master' or 'develop'
     paths:
       # Adjust these paths to your actual chart location and workflow file
       - 'helm/charts/nginx/**'
@@ -41,9 +41,9 @@ jobs:
         run: |
           echo "Cleaning Helm cache directory: ~/.helm"
           rm -rf ~/.helm || true # Remove the entire directory, ignore if it doesn't exist
-          mkdir -p ~/.helm/charts/nginx/repository
-          touch ~/.helm/charts/nginx/repository/repositories.yaml
-          touch ~/.helm/charts/nginx/registry.json 
+          mkdir -p ~/.helm/repository
+          touch ~/.helm/repository/repositories.yaml
+          touch ~/.helm/registry.json # This will be populated by helm registry login
 
       - name: Login to GitHub Container Registry
         run: |
@@ -62,7 +62,7 @@ jobs:
           echo "chart_version=$CHART_VERSION" >> "$GITHUB_OUTPUT"
 
       - name: Package Helm Chart
-        run: helm package helm/charts/nginx
+        run: helm package helm
 
       - name: Push Helm Chart to GHCR
         run: |
@@ -70,5 +70,3 @@ jobs:
           CHART_OCI_PATH="oci://ghcr.io/${{ github.repository_owner }}/${{ steps.get_chart_info.outputs.chart_name }}"
           echo "Pushing $CHART_PACKAGE_NAME to $CHART_OCI_PATH"
           helm push "$CHART_PACKAGE_NAME" "$CHART_OCI_PATH"
-
-      
