Update the NGINX chart.

--- a/helm/charts/nginx/templates/deployment.yaml
+++ b/helm/charts/nginx/templates/deployment.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "ssoGateway.fullname" . }}-proxy
+  name: {{ include "mediawiki.fullname" . }}-proxy
   labels:
-    {{- include "ssoGateway.labels" . | nindent 4 }}
+    {{- include "mediawiki.labels" . | nindent 4 }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
   selector:
     matchLabels:
-      {{- include "ssoGateway.selectorLabels" . | nindent 6 }}
+      {{- include "mediawiki.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -18,7 +18,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "ssoGateway.labels" . | nindent 8 }}
+        {{- include "mediawiki.labels" . | nindent 8 }}
 	{{- with .Values.podLabels }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
