--- a/helm/charts/isd-wiki-proxy/templates/deployment.yaml
+++ b/helm/charts/isd-wiki-proxy/templates/deployment.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "mediawiki.fullname" . }}-proxy
+  name: {{ include "isd-wiki-proxy.fullname" . }}
   labels:
-    {{- include "mediawiki.labels" . | nindent 4 }}
+    {{- include "isd-wiki-proxy.labels" . | nindent 4 }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
   selector:
     matchLabels:
-      {{- include "mediawiki.selectorLabels" . | nindent 6 }}
+      {{- include "isd-wiki-proxy.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -18,7 +18,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "mediawiki.labels" . | nindent 8 }}
+        {{- include "isd-wiki-proxy.labels" . | nindent 8 }}
 	{{- with .Values.podLabels }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
@@ -27,7 +27,7 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ .Values.global.serviceAccount.name }}
+      serviceAccountName: {{ include "isd-wiki-proxy.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
@@ -37,31 +37,20 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
-            - name: health-check
-              containerPort: {{ .Values.service.ports.http }}
-              protocol: TCP
-            - name: proxy-traffic
-              containerPort: {{ .Values.service.ports.https }}
+            - name: http
+              containerPort: {{ .Values.service.port }}
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /health
-              port: health-check
-            initialDelaySeconds: {{ .Values.probes.liveness.initialDelaySeconds }}
-            periodSeconds: {{ .Values.probes.liveness.periodSeconds }}
-            timeoutSeconds: {{ .Values.probes.liveness.timeoutSeconds }}
-            failureThreshold: {{ .Values.probes.liveness.failureThreshold }}
+              path: /
+              port: http
           readinessProbe:
             httpGet:
-              path: /health
-              port: health-check
-            initialDelaySeconds: {{ .Values.probes.liveness.initialDelaySeconds }}
-            periodSeconds: {{ .Values.probes.liveness.periodSeconds }}
-            timeoutSeconds: {{ .Values.probes.liveness.timeoutSeconds }}
-            failureThreshold: {{ .Values.probes.liveness.failureThreshold }}
+              path: /
+              port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
-
+          {{- with .Values.volumeMounts }}
           volumeMounts:
             - name: empty-dir
               mountPath: /tmp
@@ -71,7 +60,7 @@ spec:
             - name: nginx-conf
               mountPath: /etc/nginx/conf.d/default.conf
               subPath: nginx.conf 
-            - name: sso-gateway-nginx-proxy-server-conf
+            - name: nginx-proxy-server-blocks-conf
               mountPath: /etc/nginx/conf.d/server-blocks.conf
               subPath: server-blocks.conf 
               readOnly: true
@@ -98,20 +87,16 @@ spec:
         #     defaultMode: 420
         - name: nginx-conf
           configMap:
-            name: sso-gateway-nginx-config
-        - name: sso-gateway-nginx-proxy-server-conf
-          configMap:
-            name: sso-gateway-nginx-proxy-server-conf
-            defaultMode: 0644
+            name: isd-wiki-nginx-config
+            defaultMode: 0644  
         - name: nginx-cache
           emptyDir: {}
         - name: mediawiki-html
           persistentVolumeClaim:
-            claimName: {{ include "mediawiki.fullname" . }}-html
+            claimName: isd-wiki-html
             readOnly: true
 
-      {{- if .Values.autoscaling.enabled }}
-      autoscaling:
+      {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
@@ -124,4 +109,3 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-{{- end }}
