--- a/helm/charts/isd-wiki-proxy/templates/nginx-conf-configmap.yaml
+++ b/helm/charts/isd-wiki-proxy/templates/nginx-conf-configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: sso-gateway-nginx-config
+  name: isd-wiki-nginx-config
 data:
   nginx.conf: |
       http {
