--- a/helm/charts/isd-wiki-proxy/Chart.yaml
+++ b/helm/charts/isd-wiki-proxy/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: isd-wiki-proxy
+name: mediawikiServer
 description: ISD Wiki NGINX web server
 type: application
 version: 0.1.0
