--- a/helm/charts/isd-wiki-proxy/templates/service.yaml
+++ b/helm/charts/isd-wiki-proxy/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "isd-wiki-proxy.fullname" . }}
+  name: {{ include "mediawikiServer.fullname" . }}
   labels:
-    {{- include "isd-wiki-proxy.labels" . | nindent 4 }}
+    {{- include "mediawikiServer.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -24,4 +24,4 @@ spec:
       port: 8081
       targetPort: proxy-traffic
   selector:
-    {{- include "isd-wiki-proxy.selectorLabels" . | nindent 4 }}
+    {{- include "mediawikiServer.selectorLabels" . | nindent 4 }}
