--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -11,6 +11,6 @@ dependencies:
     version: "11.4.7"
     repository: oci://registry-1.docker.io/bitnamicharts 
     condition: mariadb.enabled
-  - name: mediawikiServer
+  - name: isdWikiServer
     version: 1.0.0
-    repository: file://./charts/mediawikiServer
+    repository: file://./charts/isdWikiServer
