--- a/helm/charts/isdWikiServer/Chart.yaml
+++ b/helm/charts/isdWikiServer/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: mediawikiServer
+name: isdWikiServer
 description: ISD Wiki NGINX web server
 type: application
 version: 0.1.0
