--- a/helm/templates/ingress.yaml
+++ b/helm/templates/ingress.yaml
@@ -1,9 +1,9 @@
-{{- if .Values.mediawiki.ingress.enabled -}}
-{{- $fullName := include "mediawiki.fullname" . -}}
-{{- $svcPort := .Values.mediawiki.service.port -}}
-{{- if and .Values.mediawiki.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
-  {{- if not (hasKey .Values.mediawiki.ingress.annotations "kubernetes.io/ingress.class") }}
-  {{- $_ := set .Values.mediawiki.ingress.annotations "kubernetes.io/ingress.class" .Values.mediawiki.ingress.className}}
+{{- if .Values.ingress.enabled -}}
+{{- $fullName := include "isdWiki.fullname" . -}}
+{{- $svcPort := .Values.service.port -}}
+{{- if and .Values.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
+  {{- if not (hasKey .Values.ingress.annotations "kubernetes.io/ingress.class") }}
+  {{- $_ := set .Values.ingress.annotations "kubernetes.io/ingress.class" .Values.ingress.className}}
   {{- end }}
 {{- end }}
 {{- if semverCompare ">=1.19-0" .Capabilities.KubeVersion.GitVersion -}}
@@ -17,18 +17,18 @@ kind: Ingress
 metadata:
   name: {{ $fullName }}
   labels:
-    {{- include "mediawiki.labels" . | nindent 4 }}
-  {{- with .Values.mediawiki.ingress.annotations }}
+    {{- include "isdWiki.labels" . | nindent 4 }}
+  {{- with .Values.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  {{- if and .Values.mediawiki.ingress.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
-  ingressClassName: {{ .Values.mediawiki.ingress.className }}
+  {{- if and .Values.ingress.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
+  ingressClassName: {{ .Values.ingress.className }}
   {{- end }}
-  {{- if .Values.mediawiki.ingress.tls }}
+  {{- if .Values.ingress.tls }}
   tls:
-    {{- range .Values.mediawiki.ingress.tls }}
+    {{- range .Values.ingress.tls }}
     - hosts:
         {{- range .hosts }}
         - {{ . | quote }}
@@ -37,7 +37,7 @@ spec:
     {{- end }}
   {{- end }}
   rules:
-    {{- range .Values.mediawiki.ingress.hosts }}
+    {{- range .Values.ingress.hosts }}
     - host: {{ .host | quote }}
       http:
         paths:
