--- a/helm/charts/isdWikiServer/templates/tests/test-connection.yaml
+++ b/helm/charts/isdWikiServer/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "isdWikiServer.fullname" . }}-test-connection"
+  name: "{{ include "isd-wiki-server.fullname" . }}-test-connection"
   labels:
-    {{- include "isdWikiServer.labels" . | nindent 4 }}
+    {{- include "isd-wiki-server.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "isdWikiServer.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "isd-wiki-server.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
