--- a/helm/charts/isdWikiServer/values.yaml
+++ b/helm/charts/isdWikiServer/values.yaml
@@ -1,11 +1,11 @@
-# Default values for isdWikiServer.
+# Default values for isd-wiki-server.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
 image:
-  repository: ghcr.io/bcgov/isdWikiServer
+  repository: ghcr.io/bcgov/isd-wiki-server
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
