--- a/helm/templates/pvc-html.yaml
+++ b/helm/templates/pvc-html.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ include "isdWiki.fullname" . }}-html
+  name: {{ include "isd-wiki.fullname" . }}-html
   labels:
-    {{- include "isdWiki.labels" . | nindent 4 }}
+    {{- include "isd-wiki.labels" . | nindent 4 }}
 spec:
   accessModes:
     - ReadWriteOnce
