--- a/helm/charts/nginx-server/templates/deployment.yaml
+++ b/helm/charts/nginx-server/templates/deployment.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "isd-wiki-server.fullname" . }}
+  name: {{ include "nginx-server.fullname" . }}
   labels:
-   {{- include "isd-wiki-server.labels" . | nindent 4 }}
+   {{- include "nginx-server.labels" . | nindent 4 }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
   selector:
     matchLabels:
-      {{- include "isd-wiki-server.selectorLabels" . | nindent 6 }}
+      {{- include "nginx-server.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -18,7 +18,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "isd-wiki-server.labels" . | nindent 8 }}
+        {{- include "nginx-server.labels" . | nindent 8 }}
 	{{- with .Values.podLabels }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
@@ -27,7 +27,7 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "isd-wiki-server.serviceAccountName" . }}
+      # serviceAccountName: {{ include "nginx-server.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
