--- a/helm/charts/nginx-server/Chart.yaml
+++ b/helm/charts/nginx-server/Chart.yaml
@@ -1,6 +1,7 @@
 apiVersion: v2
-name: isd-wiki-server
+name: nginx-server
 description: ISD Wiki NGINX web server
 type: application
 version: 0.1.0
 appVersion: "1.25.5"
+icon: https://upload.wikimedia.org/wikipedia/commons/c/c5/Nginx_logo.svg
