Update nginx-server version and package name.

--- a/helm/charts/nginx-server/values.yaml
+++ b/helm/charts/nginx-server/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: ghcr.io/bcgov/nginx-server
+  repository: ghcr.io/bcgov/isd-wiki-proxy
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
