--- a/helm/charts/patroni/values.yaml
+++ b/helm/charts/patroni/values.yaml
@@ -32,7 +32,7 @@ secretOverride: ~
 
 serviceAccount:
   # Specifies whether a service account should be created
-  create: true
+  create: false
   # Annotations to add to the service account
   annotations: {}
   # The name of the service account to use.
