--- a/helm/charts/patroni/values.yaml
+++ b/helm/charts/patroni/values.yaml
@@ -39,7 +39,7 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name: ~
 
-podAnnotations: {}
+# podAnnotations: {}
 
 podAntiAffinity: true
 
